[tool.poetry]
name = "test_poetry"
version = "0.1.0"
description = ""
authors = ["Kamalutdinov_Rashid <kamalutdinov.r.r@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119
